CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4f
------------
* Fixed some bugs

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4e
------------
* A pile of typos and bugfixes
* Added Asche's first two tasks, plus reward sex. They have a relatively low level requirement and a "need to buy" limit of 500/1000 coins from Asche before they activate. Written by The Observer
* Added the first two chapters of Birth of a Kingdom, another Shadow Lady Themeroom written by The Observer

Version 0.4d2
-------------
* Fixed several issues connected to the new item system:
 - Fixed the issue that was causing smoke bombs to break certain scenes by escaping unescapable battles. Smoke Bomb is now disabled in those fights
 - Fixed Maria and Terry AI so they call the correct functions when they use items. This fixes the skipped turn bugs their fights had
* Fixed some typos and bugs related to Bastet (Cat Dynasty)
* Fixed a bugged flag that'd cause the game to not recognize you beating Orchid

Version 0.4d
------------
* Mass of typos
* Fixed several bugged abilities (due to the new damagePool property) that were targeting the wrong stats. This applies to Rut, Tirade, Preach and Sermon.
* Reworked the combat item system. Report if there's any weirdness when using items.
* Added some more fates to Asche
* Expanded on Asche's inventory
* Added Aquilius to outlaws camp (find him in the infirmary). Written by The Observer.
* Jo Rhade has made a re-appearance with a new win scene or two for the equines. Player needs a cock.
* Themed rooms are added to the Shadow Lady. You need to buy a regular whore first (currently only Roa available)
 - Cat Dynasty, chapter one, written by LD and QB
 - More to come...
* Added some Dreams for Donovan and Asche. Written by The Observer.
